mcp-servers/oracle/openshift-mcp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: oracle-mcp-server
  labels:
    app: oracle-mcp-server
spec:
  host: oracle-mcp-server-ai-arch-charts-rhkp.apps.ai-dev02.kni.syseng.devcluster.openshift.com
  to:
    kind: Service
    name: oracle-mcp-server
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
